--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>Weather App</title>
+    <title>Weather Search</title>
   </head>
   <body>
     <div class="search">
