--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>Weather Search</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="search">
@@ -35,7 +35,43 @@
         </svg>
       </button>
     </div>
-    <div class="searchContainer">
+    <div class="searchContainer1" data-index="1">
+      <div class="weather">
+        <h2 class="cityName"></h2>
+        <h1 class="temperature"></h1>
+        <img src="" alt="" class="icon" />
+        <div class="description"></div>
+        <div class="humidity"></div>
+        <div class="windSpeed"></div>
+        <div class="sunRise"></div>
+        <div class="sunSet"></div>
+      </div>
+    </div>
+    <div class="searchContainer2" data-index="2">
+      <div class="weather">
+        <h2 class="cityName"></h2>
+        <h1 class="temperature"></h1>
+        <img src="" alt="" class="icon" />
+        <div class="description"></div>
+        <div class="humidity"></div>
+        <div class="windSpeed"></div>
+        <div class="sunRise"></div>
+        <div class="sunSet"></div>
+      </div>
+    </div>
+    <div class="searchContainer3" data-index="3">
+      <div class="weather">
+        <h2 class="cityName"></h2>
+        <h1 class="temperature"></h1>
+        <img src="" alt="" class="icon" />
+        <div class="description"></div>
+        <div class="humidity"></div>
+        <div class="windSpeed"></div>
+        <div class="sunRise"></div>
+        <div class="sunSet"></div>
+      </div>
+    </div>
+    <div class="searchContainer4" data-index="1">
       <div class="weather">
         <h2 class="cityName"></h2>
         <h1 class="temperature"></h1>
