--- a/index.html
+++ b/index.html
@@ -35,53 +35,13 @@
         </svg>
       </button>
     </div>
-    <div class="searchContainer1" data-index="1">
-      <div class="weather">
-        <h2 class="cityName"></h2>
-        <h1 class="temperature"></h1>
-        <img src="" alt="" class="icon" />
-        <div class="description"></div>
-        <div class="humidity"></div>
-        <div class="windSpeed"></div>
-        <div class="sunRise"></div>
-        <div class="sunSet"></div>
-      </div>
+    <div class="searchContainer1">
     </div>
-    <div class="searchContainer2" data-index="2">
-      <div class="weather">
-        <h2 class="cityName"></h2>
-        <h1 class="temperature"></h1>
-        <img src="" alt="" class="icon" />
-        <div class="description"></div>
-        <div class="humidity"></div>
-        <div class="windSpeed"></div>
-        <div class="sunRise"></div>
-        <div class="sunSet"></div>
-      </div>
+    <div class="searchContainer2">
     </div>
-    <div class="searchContainer3" data-index="3">
-      <div class="weather">
-        <h2 class="cityName"></h2>
-        <h1 class="temperature"></h1>
-        <img src="" alt="" class="icon" />
-        <div class="description"></div>
-        <div class="humidity"></div>
-        <div class="windSpeed"></div>
-        <div class="sunRise"></div>
-        <div class="sunSet"></div>
-      </div>
+    <div class="searchContainer3">
     </div>
-    <div class="searchContainer4" data-index="1">
-      <div class="weather">
-        <h2 class="cityName"></h2>
-        <h1 class="temperature"></h1>
-        <img src="" alt="" class="icon" />
-        <div class="description"></div>
-        <div class="humidity"></div>
-        <div class="windSpeed"></div>
-        <div class="sunRise"></div>
-        <div class="sunSet"></div>
-      </div>
+    <div class="searchContainer4">
     </div>
     <div class="resultContainer"></div>
     <div class="container">
