--- a/index.html
+++ b/index.html
@@ -36,12 +36,20 @@
       </button>
     </div>
     <div class="searchContainer1">
-    </div>
+      </div>
     <div class="searchContainer2">
-    </div>
+      </div>
     <div class="searchContainer3">
     </div>
     <div class="searchContainer4">
+    </div>
+    <div class="searchContainer5">
+    </div>
+    <div class="searchContainer6">
+    </div>
+    <div class="searchContainer7">
+    </div>
+    <div class="searchContainer8">
     </div>
     <div class="resultContainer"></div>
     <div class="container">
